# WeChatMessageViewer

./: CMakeLists.txt  README.md  vcpkg.json
assets/: icons.qrc  images.qrc  resources.rc
src/: Constants.h  main.cpp
src/audio/: OpenAL.cpp  OpenAL.h  SilkDecode.cpp  SilkDecode.h  SilkSong.cpp  SilkSong.h
src/functions/: Mmkv.cpp  Mmkv.h  Plist.cpp  Plist.h  Protobuf.cpp  Protobuf.h  Utils.cpp  Utils.h
src/qml/: components.qrc  windows.qrc
src/qml/components/: DesktopSidebarItem.qml  IconSvg.qml  Pagination.qml  SectionTitle.qml  ThemeEngine.qml  WeChatEngine.qml  WeChatFriends.qml  WeChatInfos.qml  WeChatMessages.qml  WeChatMsgListView.qml  WeChatTableView.qml
src/qml/windows/: wcmv_loginuserlist.qml  wcmv_mainwindow.qml
src/qt/: Screen.cpp  Screen.h  WeChatImageProvider.cpp  WeChatImageProvider.h  WeChatQt.cpp  WeChatQt.h
src/qtui/: ContentWidget.cpp  ContentWidget.h  FriendsWidget.cpp  FriendsWidget.h  OverviewWidget.cpp  OverviewWidget.h  RecordsWidget.cpp  RecordsWidget.h  WeChatViewerMainWindow.cpp  WeChatViewerMainWindow.h
src/qtui/designer/: friendswidget.ui  overviewwidget.ui  recordswidget.ui  resources.qrc  translations.qrc  wechatviewermainwindow.ui
src/qtui/designer/translations/: zh_CN.ts
src/sqlite3cpp/: Sqlite3DBReader.cpp  Sqlite3DBReader.h
src/thread/: AsyncActions.cpp  AsyncActions.h
src/wechat/: WeChatContext.cpp  WeChatContext.h
src/wechat/model/: Model.cpp  Model.h
src/wechat/parser/: BackupFileParser.cpp  BackupFileParser.h  MessageParser.cpp  MessageParser.h
src/wechat/parser/ios/: IOSBackupArchives.cpp  IOSBackupArchives.h  IOSBackupParser.cpp  IOSBackupParser.h  IOSMessageParser.cpp  IOSMessageParser.h
src/wechat/parser/ios/internal/: details.cpp  details.h
src/wechat/parser/win/: WINBackupArchives.cpp  WINBackupArchives.h  WINBackupParser.cpp  WINBackupParser.h  WINMessageParser.cpp  WINMessageParser.h
src/wechat/parser/win/internal/: details.cpp  details.h
